Updated gitignore and package.json

--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "https": "^1.0.0",
+    "nodemon": "^1.11.0"
   }
 }
