--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "6.9.1"
   },
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon app.js",
     "test": "mocha --timeout 10000",
     "heroku-prebuild": "echo This runs before Heroku installs your dependencies.",
     "heroku-postbuild": "echo This runs afterwards."
